--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -76,14 +76,14 @@ jobs:
         with:
           release_id: ${{ steps.create_release.outputs.id }}
 
-      - name: Prepare Deploy
-        run: |
-          rm ./dist/fluidd.zip
-          cp ./server/config.json ./dist/config.json
+      # - name: Prepare Deploy
+      #   run: |
+      #     rm ./dist/fluidd.zip
+      #     cp ./server/config.json ./dist/config.json
 
-      - name: Deploy to Host
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        run: |
-          npm run deploy:host
+      # - name: Deploy to Host
+      #   env:
+      #     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      #     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      #   run: |
+      #     npm run deploy:host
